--- a/NowComesGtk/NowComesGtk.csproj
+++ b/NowComesGtk/NowComesGtk.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="PokeApiNet" Version="3.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\PokeApi\PokeApi.csproj" />
+  </ItemGroup>
+
 </Project>
