--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,25 @@ StyleCopReport.xml
 *.pidb
 *.svclog
 *.scc
+.v2
+
+/build/
+*.suo
+*.user
+_ReSharper.*/
+*.sdf
+bin/
+obj/
+Debug/
+Release/
+*.opensdf
+*.tlog
+*.log
+TestResult.xml
+*.VisualState.xml
+Version.cs
+Version.h
+Version.cpp
 
 # Chutzpah Test files
 _Chutzpah*
