--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ obj/
 *.userosscache
 *.sln.docstates
 
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -52,6 +53,7 @@ bld/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
+FileContentIndex
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
