--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ obj/
 *.userosscache
 *.sln.docstates
 !NowComesGtk/bin/Debug/net7.0/Images/
-
+!NowComesGtk/bin/Debug/net7.0/Images
+!.png
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
