Orgazinação das labels e mudanças sobre o metodo de mudança da fonte.

--- a/.gitignore
+++ b/.gitignore
@@ -414,3 +414,5 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 *.gif
+NowComesGtk/Images/PokemonAnimated.gif
+NowComesGtk/Images/PokemonAnimatedShiny.gif
