Adição do arquivo font.ttf
Adição do arquivo font.ttf que usamos no programa, Atualização para adicionar a fonte no computador do usuario e simplificação do codigo de definição de busca.
costumização para um installer

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 
 # CS0612: Type or member is obsolete
 dotnet_diagnostic.CS0612.severity = none
+
+# CA1416: Validate platform compatibility
+dotnet_diagnostic.CA1416.severity = none
