--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,9 @@ FodyWeavers.xsd
 *.gif
 NowComesGtk/Images/PokemonAnimated.gif
 NowComesGtk/Images/PokemonAnimatedShiny.gif
+PokeTrainerSetup/PokeTrainerSetup.aip
+PokeTrainerInstaller/PokeTrainerInstaller.vdproj
+PokeTrainerSetup/PokeTrainerSetup-cache/cacheIndex.txt
+PokeTrainerSetup/PokeTrainerSetup-cache/part1/output-info.ini
+PokeTrainerSetup/PokeTrainerSetup.aiproj
+PokeTrainerSetup/PokeTrainerSetup.back.aip
