--- a/.gitignore
+++ b/.gitignore
@@ -422,3 +422,4 @@ PokeTrainerSetup/PokeTrainerSetup-cache/cacheIndex.txt
 PokeTrainerSetup/PokeTrainerSetup-cache/part1/output-info.ini
 PokeTrainerSetup/PokeTrainerSetup.aiproj
 PokeTrainerSetup/PokeTrainerSetup.back.aip
+NowComesGtk/Images/PokemonAnimatedShiny.gif
