--- a/NowComesGtk/NowComesGtk.csproj
+++ b/NowComesGtk/NowComesGtk.csproj
@@ -10,12 +10,12 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-		<Optimize>False</Optimize>
+		<Optimize>True</Optimize>
 		<DebugType>full</DebugType>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <Optimize>False</Optimize>
+	  <Optimize>True</Optimize>
 	  <DebugType>full</DebugType>
 	</PropertyGroup>
 
