--- a/NowComesGtk/NowComesGtk.csproj
+++ b/NowComesGtk/NowComesGtk.csproj
@@ -78,10 +78,7 @@
 	  <None Remove="C:\Users\Dell\.nuget\packages\gtksharp.dependencies\1.1.1\contentFiles\cs\netstandard2.0\bin\libwinpthread-1.dll" />
 	  <None Remove="C:\Users\Dell\.nuget\packages\gtksharp.dependencies\1.1.1\contentFiles\cs\netstandard2.0\bin\libxml2-2.dll" />
 	  <None Remove="C:\Users\Dell\.nuget\packages\gtksharp.dependencies\1.1.1\contentFiles\cs\netstandard2.0\bin\zlib1.dll" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Content Include="icon.ico" />
+	  <None Remove="icon.ico" />
 	</ItemGroup>
 
 	<ItemGroup>
