Organização do Projeto.

--- a/NowComesGtk/PokeTrainerFrontEnd.csproj
+++ b/NowComesGtk/PokeTrainerFrontEnd.csproj
@@ -93,7 +93,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\PokeTrainerAPI\PokeApi.csproj" />
+		<ProjectReference Include="..\..\PokeTrainerAPI\PokeTrainerBackEnd.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
