--- a/.gitignore
+++ b/.gitignore
@@ -423,3 +423,4 @@ PokeTrainerSetup/PokeTrainerSetup-cache/part1/output-info.ini
 PokeTrainerSetup/PokeTrainerSetup.aiproj
 PokeTrainerSetup/PokeTrainerSetup.back.aip
 NowComesGtk/Images/PokemonAnimatedShiny.gif
+/NowComesGtk/Xml's/pokemonList.xml
