--- a/.gitignore
+++ b/.gitignore
@@ -424,3 +424,5 @@ PokeTrainerSetup/PokeTrainerSetup.aiproj
 PokeTrainerSetup/PokeTrainerSetup.back.aip
 NowComesGtk/Images/PokemonAnimatedShiny.gif
 /NowComesGtk/Xml's/pokemonList.xml
+/NowComesGtk/Images/PokemonAnimated.gif
+/NowComesGtk/Images/PokemonAnimatedShiny.gif
